--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,16 +24,16 @@ jobs:
       run: |
         npm install
         npx webpack
-  deploy:
-    runs-on: ubuntu-latest
+#   deploy:
+#     runs-on: ubuntu-latest
 
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+#     environment:
+#       name: github-pages
+#       url: ${{ steps.deployment.outputs.page_url }}
 
-    needs: build
+#     needs: build
 
-    steps:
-      - name: Deploy to GitHub Pages
-        run: |
-          npm run deploy
+#     steps:
+#       - name: Deploy to GitHub Pages
+#         run: |
+#           npm run deploy
