--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
   },
   "devDependencies": {
     "gh-pages": "^5.0.0"
+  },
+  "jest": {
+    "transformIgnorePatterns": ["/node_modules/(?!d3|d3-force)"]
   }
 }
