--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "d3": "7.8.4"
+    "d3": "5.16.0-esm"
   },
   "scripts": {
     "predeploy": "npm run build",
