--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "d3": "5.16.0-esm"
+    "d3": "7.8.4",
+    "babel": "^6.23.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -42,9 +43,9 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "jest": {
-    "module-name-mapper": {
-      "^d3$": "<rootDir>/node_modules/d3/dist/d3.min.js"
-    }
+  "babel": {
+    "presets": ["@babel/preset-env"],
+    "plugins": [ "transform-modules-commonjs"]
   }
+
 }
