--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "babel": {
     "presets": ["@babel/preset-env"],
-    "plugins": [ "transform-modules-commonjs"]
+    "plugins": [ "@babel/transform-modules-commonjs"]
   }
 
 }
