--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "d3": "7.8.4",
-    "babel": "^6.23.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -43,9 +42,10 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "babel": {
-    "presets": ["@babel/preset-env"],
-    "plugins": [ "@babel/transform-modules-commonjs"]
+  "jest" {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!d3)/"
+    ]
   }
 
 }
