--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,6 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
@@ -26,6 +25,20 @@ jobs:
         cache: 'npm'
     - name: Install Dependencies
       run: npm install
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: Setup CI
+      run: npm ci
+    - name: Build App
+      run: npm run build --if-present
+    - name: Test App
+      run: npm test
+  deploy:
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    needs: build
+    steps:
+      - name: Deploy App
+        run: npm run deploy
+      
