--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,5 +40,7 @@ jobs:
     needs: build
     steps:
       - name: Deploy App
-        run: npm run deploy
-      
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          folder: build
+
