--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Vertex Coloring Visualizer CI/CD
 
 on:
   push:
@@ -40,7 +40,8 @@ jobs:
     needs: build
     steps:
       - name: Deploy App
-        uses: JamesIves/github-pages-deploy-action@4.1.1
-        with:
-          folder: build
+        run: npm run deploy
+        env:
+            github_token: ${{ secrets.ACCESS_TOKEN }}
+            publish_dir: ./build
 
