--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,8 @@ jobs:
 
     needs: build
     steps:
+      - run: pwd
+      - run: ls
       - name: Deploy App
         run: npm run deploy
         env:
