--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,5 +44,5 @@ jobs:
         run: npm run deploy
         env:
             github_token: ${{ secrets.ACCESS_TOKEN }}
-            publish_dir: ./build
+            publish_dir: ../build
 
