--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,11 @@ name: Vertex Coloring Visualizer CI/CD
 on:
   push:
     branches: [ "master" ]
+    
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build:
@@ -35,6 +40,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    needs: build
     steps:
       - name: Deploy App
         run: npm run deploy
@@ -42,5 +48,6 @@ jobs:
             name: github-pages
             url: ${{ steps.deployment.outputs.page_url }}
             github_token: ${{ secrets.ACCESS_TOKEN }}
+            publish_dir: ./build
             repository: ${{ github.repository }}
 
