--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,13 +41,9 @@ jobs:
     runs-on: ubuntu-latest
 
     needs: build
-    steps:
-      - name: Deploy App
-        run: npm run deploy
-        env:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-            github_token: ${{ secrets.ACCESS_TOKEN }}
-            publish_dir: ./build
-            repository: ${{ github.repository }}
-
+    steps: 
+    - name: Deploy App
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./build
