--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,5 +46,4 @@ jobs:
       run: npm run deploy
       env:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
-        
+        publish_dir: ./public
