--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,6 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
-    env:
-      path: ./build
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
@@ -36,13 +34,11 @@ jobs:
       run: npm ci
     - name: Build App
       run: npm run build --if-present
-    - name: Test App
-      run: npm test
   deploy:
     runs-on: ubuntu-latest
-
     needs: build
     steps: 
+    - run: cd build
     - name: Deploy App
       run: npm run deploy
       env:
