--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,8 @@ jobs:
           ${{ runner.os }}-build-${{ env.cache-name }}-
           ${{ runner.os }}-build-
           ${{ runner.os }}-
+    - run: npm uninstall react-scripts
+    - run: npm install react-scripts
     - name: Install Dependencies
       run: npm install
     - name: Setup CI
