--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,8 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v3
     - run: npm install react-scripts
+    - run: git config --global user.email ${{ secrets.USER_EMAIL }}
+    - run: git config --global user.name Nicky Kriplani
     - name: Deploy App
       run: npm run deploy
       env:
