--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
       uses: actions/checkout@v3
     - run: npm install react-scripts
     - run: git config --global user.email ${{ secrets.USER_EMAIL }}
-    - run: git config --global user.name Nicky Kriplani
+    - run: git config --global user.name NickyDCFP
     - name: Deploy App
       run: npm run deploy
       env:
