--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,16 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v3
     - run: npm install react-scripts
-    - run: git config --global user.email ${{ secrets.USER_EMAIL }}
+    - name: Authenticate
+      env:
+        ACCESS_TOKEN: ${{ secrets.ACTIONS_DEPLOYMENT_TOKEN }}
+        username: NickyDCFP
+        repo: vertex-coloring-visualizer
+      run: |
+        git config --global user.email ${{ secrets.USER_EMAIL }}
+        git config --global user.name <username>
+        git remote add origin https://<ACCESS_TOKEN>@github.com/<username>/<repo>.git
+
     - run: git config --global user.name NickyDCFP
     - name: Deploy App
       run: npm run deploy
