--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v3
     - run: npm install react-scripts
-    - name: Authentica]=te
+    - name: Authenticate
       run: |
         git config --global user.email ${{ secrets.USER_EMAIL }}
         git config --global user.name NickyDCFP
@@ -67,4 +67,5 @@ jobs:
       env:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./build
+        branch: gh-pages
         
