--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,4 +67,5 @@ jobs:
       env:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./build
+        branch: gh-pages
         
